<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="24.0dip" _xmlns:android="http://schemas.android.com/apk/res/android" xmlns:_xmlns="xmlns"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="?textAppearanceSubhead" android:textColor="@color/secondary_font" android:ellipsize="end" android:gravity="center" android:id="@id/seasons" android:background="?selectableItemBackground" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:maxLines="1" android:singleLine="@bool/rtl_single_line_true" android:includeFontPadding="false" android:drawableRight="@drawable/arrow_down_dark" android:drawablePadding="8.0dip" android:drawableEnd="@drawable/arrow_down_dark" />
    <com.google.android.apps.youtube.app.ui.TintableImageView android:id="@id/like_button" android:background="?selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="56.0dip" android:layout_height="fill_parent" android:src="@drawable/playlist_add_mtrl_alpha" android:contentDescription="@string/playlist_save" />
    <com.google.android.apps.youtube.app.ui.TintableImageView android:id="@id/share_button" android:background="?selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="56.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_share_mtrl_alpha" android:contentDescription="@string/accessibility_playlist_share" />
    <com.google.android.apps.youtube.app.ui.TintableImageView android:id="@id/edit_button" android:background="?selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="56.0dip" android:layout_height="fill_parent" android:src="@drawable/ic_edit_mtrl_alpha" android:contentDescription="@string/accessibility_playlist_edit" />
    <com.google.android.apps.youtube.app.ui.OfflineArrowView android:id="@id/offline_button" android:background="?selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:visibility="gone" android:layout_width="56.0dip" android:layout_height="fill_parent" />
</LinearLayout>